--- a/Proyecto-API/src/main/resources/application.properties
+++ b/Proyecto-API/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/dbforum
+spring.datasource.url=jdbc:mysql://localhost:3306/db-foro
 spring.datasource.username= root
 spring.datasource.password= root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
